renamed the Mainpage.html to index.html also,script.js,style.css

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAIN-PAGE</title>
 
-     <link rel="stylesheet" href="MainPage.css">
+     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="about.css">
 </head>
@@ -31,7 +31,7 @@
     <h1 class="nav-title">The Charity</h1>
     <nav>
         <ul> 
-            <li><a href="MainPage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>           
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
@@ -102,7 +102,7 @@
         <div class="firstimg">
               <img src="aboutintro1.png" height="130px" width="130px" alt="about img1">
               <h1 class="no">  120K </h1>
-              <h3> children helped <h3>
+              <h3> children helped </h3>
         </div>
         <div class="secondimg">
               <img src="aboutintro2.png" height="130px" width="130px" alt="about img2">
@@ -170,7 +170,7 @@
             <p class="datenews">March 12, 2018</p>
         </li>
     </ul>
-</div>+
+</div>
 
 
 <div class="contacts">
