--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEWS-PAGE</title>
+    <title>Contact-PAGE</title>
 
-     <link rel="stylesheet" href="MainPage.css">
+     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="contact.css">
 </head>
@@ -31,7 +31,7 @@
     <h1 class="nav-title">The Charity</h1>
     <nav>
         <ul> 
-            <li><a href="MainPage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>           
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
@@ -163,7 +163,7 @@
             <p class="datenews">March 12, 2018</p>
         </li>
     </ul>
-</div>+
+</div>
 
 
 <div class="contacts">
