--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
 
-    <link rel="stylesheet" href="MainPage.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Gallery specific CSS -->
     <link rel="stylesheet" href="gallery.css">
@@ -30,7 +30,7 @@
     <h1 class="nav-title">The Charity</h1>
     <nav>
         <ul>
-            <li><a href="MainPage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
@@ -157,7 +157,7 @@
             <p class="datenews">March 12, 2018</p>
         </li>
     </ul>
-</div>+
+</div>
 
 
 <div class="contacts">
