--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAIN-PAGE</title>
-    <link rel="stylesheet" href="MainPage.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>    
@@ -28,7 +28,7 @@
     <h1 class="nav-title">The Charity</h1>
     <nav>
         <ul> 
-            <li><a href="MainPage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>           
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
@@ -57,7 +57,7 @@
 
 
 
-                <a href="MainPage.html"> 
+                <a href="index.html"> 
                 <button class="Donate">Donate Now</button> 
                 </a> 
 
@@ -151,7 +151,7 @@
         <div class="firstimg">
               <img src="aboutintro1.png" height="130px" width="130px" alt="about img1">
               <h1 class="no">  120K </h1>
-              <h3> children helped <h3>
+              <h3> children helped </h3>
         </div>
         <div class="secondimg">
               <img src="aboutintro2.png" height="130px" width="130px" alt="about img2">
@@ -217,7 +217,7 @@
             <p class="datenews">March 12, 2018</p>
         </li>
     </ul>
-</div>+
+</div>
 
 
 <div class="contacts">
@@ -242,7 +242,7 @@
 </main>
 
 
-<script src="MainPage.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
