--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <title>Gallery</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Gallery specific CSS -->
     <link rel="stylesheet" href="gallery.css">
 </head>
@@ -27,7 +27,10 @@
 </div>
 <!-- HEADER (reuse same header from main page) -->
 <header>
-    <h1 class="nav-title">The Charity</h1>
+    <div class="header-branding">
+        <i class="fa-solid fa-hand-holding-heart header-icon"></i>
+        <span class="header-text"><span class="header-the">The</span> <span class="header-charity">Charity</span></span>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -56,56 +59,56 @@
 <section class="gallery-section">
 
     <div class="gallery-card">
-        <img src="gallery1.png" alt="Water for Children">
+        <img src="img/gallery1.png" alt="Water for Children">
         <h3>Water for Children AID</h3>
         <span>2018 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery2.png" alt="Toys for Children">
+        <img src="img/gallery2.png" alt="Toys for Children">
         <h3>Toys for Children Campaign</h3>
         <span>2019 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery3.png" alt="Children Campaign">
+        <img src="img/gallery3.png" alt="Children Campaign">
         <h3>Healthy Meals for Growing Minds</h3>
         <span>2020 Causes</span>
     </div>
 
 
     <div class="gallery-card">
-        <img src="gallery4.png" alt="Children Campaign">
+        <img src="img/gallery4.png" alt="Children Campaign">
         <h3>Shelter & Care for Orphaned Children</h3>
         <span>2020 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery5.png" alt="Children Campaign">
+        <img src="img/gallery5.png" alt="Children Campaign">
         <h3>Clean Water for Children Mission</h3>
         <span>2012 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery6.png" alt="Children Campaign">
+        <img src="img/gallery6.png" alt="Children Campaign">
         <h3>Support Children Life Campaign</h3>
         <span>2018 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery7.png" alt="Children Campaign">
+        <img src="img/gallery9.png" alt="Children Campaign">
         <h3>Support Children Life Campaign</h3>
         <span>2018 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery8.jpeg" alt="Children Campaign">
+        <img src="img/gallery7.png" alt="Children Campaign">
         <h3>Support Children Life Campaign</h3>
         <span>2018 Causes</span>
     </div>
 
     <div class="gallery-card">
-        <img src="gallery9.png" alt="Children Campaign">
+        <img src="img/gallery8.jpeg" alt="Children Campaign">
         <h3>Support Children Life Campaign</h3>
         <span>2018 Causes</span>
     </div>
@@ -113,70 +116,83 @@
 
 <button id="loadMoreBtn" class="load">Load more </button> 
 
-<!-- FOOTER (reuse same footer) -->
 <footer>
-
-
     <div class="footerclass">
+        <!-- Column 1: Brand/About -->
+        <div class="footer-column">
+            <div class="brand-line">
+                <span class="logo-icon"><i class="fa-solid fa-hand-holding-heart"></i></span>
+                <span class="brand-text"><span class="the-text">The</span> <span class="charity-text">Charity</span></span>
+            </div>
+            <p class="brand-paragraph">Hope begins with a gift, and every action creates a lasting impact. Our mission starts within the community. We are dedicated to building a brighter future for those in need.</p>
+            <div class="social-icons">
+                <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
+                <span class="social-icon"><i class="fab fa-twitter"></i></span>
+                <span class="social-icon"><i class="fab fa-instagram"></i></span>
+                <span class="social-icon"><i class="fab fa-linkedin-in"></i></span>
+                <span class="social-icon"><i class="fab fa-youtube"></i></span>
+            </div>
+        </div>
 
-<div class="thecharity">
-    <p class="footertitle">The Charity</p>
-    <p class="footercharity">"Hope begins with a gift, and every action creates a lasting impact. Our mission starts within the community. We are dedicated to building a brighter future for those in need through your generous support. Every small act of kindness counts."</p>
+        <!-- Column 2: Useful Links -->
+        <div class="footer-column">
+            <h3 class="footer-heading">Useful Links</h3>
+            <ul class="links-list">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Become a Volunteer</a></li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Causes</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
+        </div>
 
-</div>
+        <!-- Column 3: Latest News -->
+        <div class="footer-column">
+            <h3 class="footer-heading">Latest News</h3>
+            <div class="news-container">
+                <div class="news-item">
+                    <p class="news-title">A new cause to help</p>
+                    <p class="news-date">March 12, 2018</p>
+                </div>
+                <div class="news-item">
+                    <p class="news-title">We love to help people</p>
+                    <p class="news-date">March 12, 2018</p>
+                </div>
+                <div class="news-item">
+                    <p class="news-title">The new ideas for helping</p>
+                    <p class="news-date">March 12, 2018</p>
+                </div>
+                <div class="news-item">
+                    <p class="news-title">Community support grows</p>
+                    <p class="news-date">March 10, 2018</p>
+                </div>
+            </div>
+        </div>
 
-
-<div class="useful links">
-    <p class="footertitle">Useful Links</p>
-    <p class="footerlinks">
-        <span>Privacy Policy</span><br>
-        <span>Become a Volunteer</span><br>
-        <span>Donate</span><br>
-        <span>Testimonials</span><br>
-        <span>Causes</span><br>
-        <span>Portfolio</span><br>
-        <span>News</span>
-    </p>
-</div>
-
-
-<div class="latest-news">
-    <p class="footertitle">Latest News</p>
-    
-    <ul class="footer-list">
-        <li>
-            <p class="footernews">A new cause to help</p>
-            <p class="datenews">March 12, 2018</p>
-        </li>
-        <li>
-            <p class="footernews">We love to help people</p>
-            <p class="datenews">March 12, 2018</p>
-        </li>
-        <li>
-            <p class="footernews">The new ideas for helping</p>
-            <p class="datenews">March 12, 2018</p>
-        </li>
-    </ul>
-</div>
-
-
-<div class="contacts">
-    <p class="footertitle">Contact</p>
-    <ul class="footercontacts">
-        <li>+45 677 8993000 223</li>
-        <li>office@template.com</li>
-        <li>Main Str. no 45-46, b3, 56832, Los Angeles, CA</li>
-    </ul>
-
-    <div class="footer-subscribe">
-        <input type="email" placeholder="Your Email" class="email-input">
-        <button type="submit" class="send-btn">Send</button>
+        <!-- Column 4: Contact -->
+        <div class="footer-column">
+            <h3 class="footer-heading">Contact</h3>
+            <div class="contact-item">
+                <span class="contact-icon"><i class="fas fa-phone-alt"></i></span>
+                <span class="contact-text">+45 677 8993000 223</span>
+            </div>
+            <div class="contact-item">
+                <span class="contact-icon"><i class="fas fa-envelope"></i></span>
+                <span class="contact-text">office@template.com</span>
+            </div>
+            <div class="contact-item">
+                <span class="contact-icon"><i class="fas fa-map-marker-alt"></i></span>
+                <span class="contact-text">Main Str. no 45-46, b3, 56832, Los Angeles, CA</span>
+            </div>
+            <div class="subscription-form">
+                <input type="email" placeholder="Your email" class="email-input">
+                <button type="submit" class="send-button">SEND</button>
+            </div>
+        </div>
     </div>
-</div>
-
-    </div>
-
-    </footer>
+</footer>
 
 
 <script>
