--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>    
 
+<div id="header"></div>
+
 
 <div class="subheader">
 
@@ -60,7 +62,7 @@
 
 
 
-                <a href="index.html"> 
+                <a href="Donation.html"> 
                 <button class="Donate">Donate Now</button> 
                 </a> 
 
