--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-                <a href="index.html"> 
+                <a href="Donation.html"> 
                 <button class="Donate">Donate Now</button> 
                 </a> 
 
