animation added to pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <nav>
         <ul> 
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>           
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
@@ -62,13 +62,15 @@
 
 
 
-                <a href="Donation.html"> 
-                <button class="Donate">Donate Now</button> 
-                </a> 
+                <div class="button-container">
+                    <a href="Donation.html"> 
+                    <button class="Donate">Donate Now</button> 
+                    </a> 
 
-                <a href="about.html"> 
-                <button class="Read">Read More</button> 
-                </a>
+                    <a href="about.html"> 
+                    <button class="Read">Read More</button> 
+                    </a>
+                </div>
                      
             </div>
             
