--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <nav>
         <ul> 
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>           
+            <li><a href="about.html" class="active">About</a></li>           
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="contact.html">Contact</a></li>
