--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html" class="active">Gallery</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -201,18 +201,11 @@
 
     let visibleCount = 3;
 
-    // Show first 3 on page load
-    for (let i = 0; i < visibleCount; i++) {
-        if (cards[i]) {
-            cards[i].style.display = "block";
-        }
-    }
-
+    // First 3 are already visible via CSS, so we start from index 3
     loadMoreBtn.addEventListener("click", () => {
-
         for (let i = visibleCount; i < visibleCount + 3; i++) {
             if (cards[i]) {
-                cards[i].style.display = "block";
+                cards[i].classList.add("show");
             }
         }
 
