--- a/Donation.html
+++ b/Donation.html
@@ -35,6 +35,23 @@
   </nav>
 </header>
 
+  
+
+
+<section class="video-section">
+  <div class="video-header">
+    <span class="video-label">IMPACT STORIES</span>
+    <h2><i class="fas fa-heart"></i> See How Your Support Makes a Difference</h2>
+    <p>Watch real stories of hope and transformation</p>
+  </div>
+
+  <div class="video-container">
+    <video controls autoplay muted loop>
+      <source src="D:\the charity\img\charityvidio.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</section>
 
   <div class="donate-container">
     <div class="donate-header">
